...
    });
    navigation.navigate('LogListScreen', {});
    addLogs({
      name: 'Create Payment Intent',
      events: [
        {
          name: 'Create',
          description: 'terminal.createPaymentIntent',
          onBack: cancelCollectPaymentMethod,
        },
      ],
    });

...
    }

    addLogs({
      name: 'Create Payment Intent',
      events: [
        {
          name: 'Created',
          description: 'terminal.createPaymentIntent',
          onBack: cancelCollectPaymentMethod,
          metadata: {
            paymentIntentId: paymentIntent.id,
            paymentIntent: JSON.stringify(paymentIntent, null, 2),
          },
...
  const _collectPaymentMethod = async (pi: PaymentIntent.Type) => {
    setCancel((prev: CancelType | null) => (prev ? { ...prev, isDisabled: false } : null));
    addLogs({
      name: 'Collect Payment Method',
      events: [
        {
          name: 'Collect',
          description: 'terminal.collectPaymentMethod',
          metadata: { paymentIntentId: pi.id },
          onBack: cancelCollectPaymentMethod,
        },
      ],
    });
...
        }
      }
      addLogs({
        name: 'Collect Payment Method',
        events: [
          {
            name: 'Collected',
            onBack: cancelCollectPaymentMethod,
            description: 'terminal.collectPaymentMethod',
            metadata: {
              paymentIntentId: paymentIntent.id,
              multicaptureStatus:
                paymentIntent.paymentMethod?.cardPresentDetails
...
  ) => {
    setCancel((prev: CancelType | null) => (prev ? { ...prev, isDisabled: true } : null));
    addLogs({
      name: 'Confirm Payment Intent',
      events: [
        {
          name: 'Process',
          onBack: cancelConfirmPaymentIntent,
          description: 'terminal.confirmPaymentIntent',
          metadata: {
            paymentIntentId: collectedPaymentIntent.id,
            surcharge: JSON.stringify(surcharge, undefined, 2),
          },
...
    }

    addLogs({
      name: 'Confirm Payment Intent',
      events: [
        {
          name: 'Confirmed',
          description: 'terminal.confirmPaymentIntent',
          metadata: {
            paymententIntentId: paymentIntent.id ? paymentIntent.id : 'null',
            chargeId: paymentIntent?.charges[0]?.id
              ? paymentIntent.charges[0].id
              : 'null',
...

  const _capturePayment = async (paymentIntentId: string) => {
    addLogs({
      name: 'Capture Payment',
      events: [
        {
          name: 'Capture',
          description: 'terminal.capturePayment',
          onBack: cancelCollectPaymentMethod,
        },
      ],
    });

...
    }

    addLogs({
      name: 'Capture Payment',
      events: [
        {
          name: 'Captured',
          onBack: cancelCollectPaymentMethod,
          description: 'terminal.paymentIntentId: ' + resp.id,
        },
      ],
    });
  };
...
              placeholder="card number"
            />
          </List>
        )}
        <List bolded={false} topSpacing={false} title="AMOUNT">
          <TextInput
            testID="amount-text-field"
            keyboardType="numeric"
            style={styles.input}
            value={inputValues.amount}
            onChangeText={(value) =>
              setInputValues((state) => ({ ...state, amount: value }))
            }
...
          title={`${formatAmountForDisplay(
            inputValues.amount,
            inputValues.currency
          )} ${inputValues.currency.toUpperCase()}`}
        >
          <ListItem
            testID="collect-payment-button"
            color={colors.blue}
            title="Collect payment"
            onPress={_createPaymentIntent}
          />
          <ListItem
            testID="process-payment-button"
...
