...
  export type InputOptions = 'insertCard' | 'swipeCard' | 'tapCard';

  export type DisplayMessage =
    | 'insertCard'
    | 'insertOrSwipeCard'
    | 'multipleContactlessCardsDetected'
    | 'removeCard'
    | 'retryCard'
    | 'swipeCard'
    | 'tryAnotherCard'
    | 'tryAnotherReadMethod'
    | 'checkMobileDevice'
    | 'cardRemovedTooEarly';
...
