...
      );
    },
    onDidSucceedReaderReconnect() {
      console.log('onDidSucceedReaderReconnect');
      Alert.alert('Reconnected!', 'We were able to reconnect to the reader.', [
        {
          text: 'OK',
        },
      ]);
    },
    onDidFailReaderReconnect() {
      Alert.alert('Reader Disconnected', 'Reader reconnection failed!', [
        {
...

  const renderConnectedContent = (
    <>
      <List title="READER CONNECTION">
        <ListItem
          title="Disconnect"
          testID="disconnect-button"
          color={colors.red}
          onPress={async () => {
            await disconnectReader();
          }}
        />
        <ListItem
...
          }
        />
      </List>

      <List title="COMMON WORKFLOWS">
        <ListItem
          testID="collect-payment-method-button"
          title="Collect card payment"
          onPress={() => {
            navigation.navigate('CollectCardPaymentScreen', {
              simulated,
              discoveryMethod,
            });
...
          title="Reader settings"
          onPress={() => {
            navigation.navigate('ReaderSettingsScreen', {});
          }}
        />
        <ListItem
          testID="update-reader-software-button"
          title="Update reader software"
          visible={pendingUpdate != null}
          onPress={() => {
            navigation.navigate('UpdateReaderScreen', {
              update: pendingUpdate,
              reader: connectedReader,
...
      </List>
    </>
  );
  return (
    <React.Fragment>
      <KeyboardAwareScrollView
        testID="home-screen"
        style={styles.container}
        contentInsetAdjustmentBehavior="automatic"
      >
        <View style={styles.accountContainer}>
          <Text style={styles.readerName}>
            {account?.settings?.dashboard?.display_name} ({account?.id})
...
        {connectedReader ? (
          renderConnectedContent
        ) : (
          <>
            <List topSpacing={false} title="MERCHANT SELECTION">
              <ListItem
                title="Set Merchant"
                color={colors.blue}
                onPress={() => {
                  navigation.navigate('MerchantSelectScreen', {});
                }}
              />
              <ListItem
                testID="discover-readers-button"
                title="Discover Readers"
                color={colors.blue}
                disabled={!account}
                onPress={() => {
                  const timeout = validTimeoutMethod() ? discoveryTimeout : 0;
                  const discoveryFilter = getDiscoveryFilter();
...
              />
            </List>

            <List topSpacing={false} title="DISCOVERY METHOD">
              <ListItem
                title={mapFromDiscoveryMethod(discoveryMethod)}
                testID="discovery-method-button"
                onPress={() =>
                  navigation.navigate('DiscoveryMethodScreen', {
                    onChange: async (value: Reader.DiscoveryMethod) => {
                      await setStoredDiscoveryMethod({
                        method: value,
                        isSimulated: simulated,
...
