...
    discoveryMethod !== 'internet' &&
    discoveryMethod !== 'appsOnDevices' &&
    !(discoveryMethod === 'tapToPay' && Platform.OS === 'android');

  return (
    <ScrollView
      testID="discovery-readers-screen"
      contentContainerStyle={styles.container}
    >
      {discoveryMethod != 'internet' && (
        <List title="SELECT LOCATION">
          <ListItem
            onPress={() => {
...
        </List>
      )}

      {supportsTestReaderUpdate && (
        <List title="TEST READER UPDATE">
          <ListItem
            testID="test-reader-update-button"
            onPress={() => {
              navigation.navigate('TestReaderUpdateScreen', {
                currentType: selectedUpdateType,
                currentComponents: selectedComponents,
                discoveryMethod: discoveryMethod,
                onSelect: (type: TestReaderUpdateTypeName, components: UpdateComponent[]) => {
...
