...
          Components: {updateInfo.components.join(', ')}
        </Text>
      )}

      <List>
        <ListItem
          testID="required-update-in-progress"
          visible={startToUpdate}
          title="Required update in progress"
        />
        <ListItem
          visible={!startToUpdate}
          title="Install update"
...
