...
      return next;
    });
  };

  return (
    <ScrollView
      testID="test-reader-update-screen"
      contentContainerStyle={styles.container}
    >
      <List title="UPDATE TYPE">
        {updateTypes.map(({ key, label }) => (
          <ListItem
            key={key}
...
