...

  // User-like
  CANCELED: 'CANCELED',
  LOCATION_SERVICES_DISABLED: 'LOCATION_SERVICES_DISABLED',
  BLUETOOTH_SCAN_TIMED_OUT: 'BLUETOOTH_SCAN_TIMED_OUT',
  BLUETOOTH_LOW_ENERGY_UNSUPPORTED: 'BLUETOOTH_LOW_ENERGY_UNSUPPORTED',
  READER_SOFTWARE_UPDATE_FAILED_BATTERY_LOW:
    'READER_SOFTWARE_UPDATE_FAILED_BATTERY_LOW',
  READER_SOFTWARE_UPDATE_FAILED_INTERRUPTED:
    'READER_SOFTWARE_UPDATE_FAILED_INTERRUPTED',
  CARD_INSERT_NOT_READ: 'CARD_INSERT_NOT_READ',
  CARD_SWIPE_NOT_READ: 'CARD_SWIPE_NOT_READ',
  CARD_READ_TIMED_OUT: 'CARD_READ_TIMED_OUT',
...
