...
    setIsAddPending(false);
    setNewAccountKey('');
  }, [accounts, newAccountKey, onSelectAccount]);

  return (
    <ScrollView
      testID="merchant-select-screen"
      contentContainerStyle={styles.container}
    >
      <List bolded={false} topSpacing={false} title="Add New Merchant">
        <TextInput
          style={styles.input}
          value={newAccountKey}
...
          placeholder="sk_test_xxx"
          editable={!isAddPending}
        />
      </List>
      <ListItem
        color={colors.blue}
        title="Add Merchant"
        onPress={onAddAccount}
        disabled={isAddPending}
      />
      <List bolded={false} topSpacing={false} title="DIRECT PAYMENT">
        <TextInput
          style={styles.input}
...
