appId: ${APP_ID}
---
- tapOn:
    id: "collect-payment-method-button"

- extendedWaitUntil:
    visible:
      id: "amount-text-field"
    timeout: 20000

- extendedWaitUntil:
    visible:
      id: "collect-payment-button"
    timeout: 20000
- tapOn:
    id: "collect-payment-button"

- scrollUntilVisible:
    element:
      id: "Create"
- scrollUntilVisible:
    element:
      id: "Created"
- scrollUntilVisible:
    element:
      id: "Collect"
- scrollUntilVisible:
    element:
      id: "insertCard / swipeCard / tapCard"
- scrollUntilVisible:
    element:
      id: "removeCard"
- scrollUntilVisible:
    element:
      id: "Collected"
- scrollUntilVisible:
    element:
      id: "Process"
- scrollUntilVisible:
    element:
      id: "Confirmed"
- scrollUntilVisible:
    element:
      id: "Capture"
- scrollUntilVisible:
    element:
      id: "Captured"
